<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfileFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profilePictureEditProfileImage"
        android:layout_width="122dp"
        android:layout_height="125dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/uploadProfilePictureButton"
        android:layout_width="181dp"
        android:layout_height="73dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="24dp"
        android:text="@string/upload_profile_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/saveChangesProfileButton"
        android:layout_width="183dp"
        android:layout_height="43dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="28dp"
        android:text="@string/save_profile_changes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/displayNameTextLayout"
        android:layout_width="364dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:tooltipText="@string/display_name_helper"
        app:helperText="@string/display_name_helper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilePictureEditProfileImage">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/displayNameEditProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/bioTextLayout"
        android:layout_width="369dp"
        android:layout_height="81dp"
        android:tooltipText="@string/bio_helper"
        app:helperText="@string/bio_helper"
        app:layout_constraintBottom_toTopOf="@+id/saveChangesProfileButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayNameTextLayout"
        app:layout_constraintVertical_bias="0.071">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/bioEditProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:gravity="start|top" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>