<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".WriteReviewFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reviewTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/write_review_hint" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <RatingBar
                android:id="@+id/writeReviewRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:stepSize="0.5" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/uploadImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:foregroundGravity="center"
                android:text="@string/upload_image_button" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/submitReviewButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/submit_review_button" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imageSelectedView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:src="@tools:sample/backgrounds/scenic" />
    </LinearLayout>
</FrameLayout>